# crystallize

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  Makefile  PKGBUILD  flake.nix  go.mod  go.sum  main.go
artifacts/: PKGBUILD  version.env
crates/crystallize-cli/: Cargo.toml
crates/crystallize-cli/src/: main.rs
crates/crystallize-core/: Cargo.toml
crates/crystallize-core/src/: lib.rs
crates/crystallize-core/src/cli/: mod.rs
crates/crystallize-core/src/config/: mod.rs
crates/crystallize-core/src/modules/base/: grub.rs  mod.rs  nvidia.rs
crates/crystallize-core/src/modules/desktops/: desktop.rs  mod.rs  services.rs
crates/crystallize-core/src/modules/locale/: mod.rs
crates/crystallize-core/src/modules/network/: mod.rs
crates/crystallize-core/src/modules/partition/: mod.rs
crates/crystallize-core/src/modules/users/: mod.rs
crates/crystallize-core/src/system/: base.rs  command.rs  desktops.rs  exec.rs  files.rs  fs.rs  install.rs  locale.rs  mod.rs  network.rs  partition.rs  users.rs
crates/crystallize-core/src/utils/: error.rs  eval.rs  exec.rs  files.rs  install.rs  logging.rs  mod.rs  returncode_eval.rs
crates/crystallize-gui/: Cargo.toml  build.rs  crystallize.gresource.xml  style.css
crates/crystallize-gui/assets/: crystallize.gresource.xml  style.css
crates/crystallize-gui/assets/locales/: en.ftl  uk.ftl
crates/crystallize-gui/assets/ui/: locale_screen.ui  welcome_screen.ui
crates/crystallize-gui/assets/ui/locale/: locale_dialog.ui
crates/crystallize-gui/everything/: .gitignore  build.sh  meson.build  modules.json
crates/crystallize-gui/everything/data/: com.axos-project.axinstall.appdata.xml.in  com.axos-project.axinstall.desktop.in  com.axos-project.axinstall.gschema.xml  meson.build
crates/crystallize-gui/everything/data/icons/: meson.build
crates/crystallize-gui/everything/po/: POTFILES  axinstall.pot  az.po  ca.po  cs.po  de.po  es.po  it.po  meson.build  pl.po  pt_BR.po  ru.po  sv.po  ta.po  tr.po  uk.po
crates/crystallize-gui/src/: main.rs  state.rs  window.rs
crates/crystallize-gui/src/modules/: mod.rs
crates/crystallize-gui/src/modules/keyboard/: layout.rs  mod.rs  screen.rs  types.rs  variant.rs
crates/crystallize-gui/src/modules/keymap/: mod.rs
crates/crystallize-gui/src/modules/locale/: dialog.rs  mod.rs
crates/crystallize-gui/src/modules/welcome/: mod.rs  screen.rs
crates/crystallize-gui/src/utils/: network.rs  networks.rs
crates/crystallize-gui/src/window/: mod.rs  window.rs
crates/crystallize-gui/ui/: crystallize.gresource.xml  welcome_screen.ui  window.ui
crates/crystallize-gui/ui/keyboard/: keyboard_screen.ui
internal/cli/: cli.go
internal/config/: config.go
internal/modules/base/: base.go  grub.go  nvidia.go
internal/modules/desktops/: desktop.go  desktops.go  services.go
internal/modules/locale/: locale.go
internal/modules/network/: network.go
internal/modules/partition/: partition.go
internal/modules/users/: users.go
internal/utils/: exec.go  files.go  install.go  logging.go  strings.go
