[workspace]
resolver = "2"
members = [
  "crates/crystallize-core",
  "crates/crystallize-cli",
  # "crates/crystallize-gui"
]

default-members = ["crates/crystallize-cli"]

[workspace.package]
authors = ["CrystalNetwork Studio"]
version = "0.3.0"
edition = "2024"
publish = false

[workspace.dependencies]
crystallize-core = { path = "crates/crystallize-core" }

anyhow = "1.0.99"
clap = { version = "4.5.47", features = ["derive"] }
serde_json = "1.0.143"
serde = { version = "1.0.219", features = ["derive"] }
log = "0.4.27"
regex = "1.11.2"
flexi_logger = { version = "0.31.2", features = ["colors"] }
human-panic = "2.0.3"
chrono = "0.4.41"
indicatif = "0.18.0"
once_cell = "1.19.0"
thiserror = "1.0.69"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
debug = "none"

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 16

[profile.test]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
incremental = true
codegen-units = 16

[profile.dev.package."*"]
opt-level = 3
