[workspace]
resolver = "2"
members = [
  "crates/crystallize-cli",
  "crates/crystallize-core",
  # "crates/crystallize-gui"
]
default-members = ["crates/crystallize-cli"]

[workspace.package]
version = "0.3.0"
authors = ["CrystalNetwork Studio"]
edition = "2024"
publish = false

[workspace.dependencies]
anyhow = "1.0.99"
chrono = "0.4.41"
clap = { version = "4.5.47", features = ["derive"] }
crystallize-core = { path = "crates/crystallize-core" }
flexi_logger = { version = "0.31.2", features = ["colors"] }
human-panic = "2.0.3"
indicatif = "0.18.0"
log = "0.4.27"
once_cell = "1.19.0"
regex = "1.11.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
thiserror = "1.0.69"

[profile.release]
opt-level = "z"
debug = "none"
strip = true
lto = true
panic = "abort"
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 16

[profile.dev.package."*"]
opt-level = 3

[profile.test]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
incremental = true
codegen-units = 16
