[package]
name = "crystallize-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
crate-type = ["lib"]

[dependencies]
clap.workspace = true
serde_json.workspace = true
serde.workspace = true
log.workspace = true
flexi_logger.workspace = true
human-panic.workspace = true
chrono.workspace = true