[package]
name = "crystallize-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
crate-type = ["lib"]

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
serde.workspace = true
log.workspace = true
regex.workspace = true
flexi_logger.workspace = true
human-panic.workspace = true
chrono.workspace = true
indicatif.workspace = true
once_cell.workspace = true
thiserror.workspace = true
