[package]
name = "crystallize-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
crate-type = ["lib"]

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
flexi_logger.workspace = true
human-panic.workspace = true
indicatif.workspace = true
log.workspace = true
once_cell.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
