[package]
name = "crystallize-gui"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
publish.workspace = true

[[bin]]
name = "crystallize"
path = "src/main.rs"

[dependencies]
crystallize-core.workspace = true
anyhow = "1.0.98"
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1.46.1", features = ["time", "rt", "rt-multi-thread", "macros"] }
log.workspace = true
gio = "0.20.12"
glib = "0.20.12"
env_logger = "0.11.8"

[dependencies.gtk]
package = "gtk4"
version = "0.9.7"
features = ["v4_18"]

[dependencies.adw]
package = "libadwaita"
version = "0.7.2"
features = ["v1_7"]

[build-dependencies]
glib-build-tools = "0.20.0"