[package]
name = "crystallize"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true

[[bin]]
name = "crystallize"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
crystallize-core.workspace = true
env_logger = "0.11.8"
gio = "0.20.12"
log.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1.46.1", features = [
  "macros",
  "rt",
  "rt-multi-thread",
  "time",
] }

[dependencies.adw]
version = "0.7.2"
features = ["v1_7"]
package = "libadwaita"

[dependencies.gtk]
version = "0.9.7"
features = ["v4_18"]
package = "gtk4"

[build-dependencies]
glib-build-tools = "0.21.0"
